Upgrade to Java 25 and SpringBoot 4