@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.4.5'
+    id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.3'
     id 'java'
     id 'jacoco'
@@ -9,11 +9,22 @@ group = 'net.adamgoodridge'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '25'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom 'org.testcontainers:testcontainers-bom:1.21.0'
+    }
 }
 
 repositories {
     mavenCentral()
+    tasks.withType(Test).configureEach {
+        useJUnitPlatform()
+        // Allow Gson (and other reflection) to access CompletableFuture internals
+        jvmArgs += ['--add-opens=java.base/java.util.concurrent=ALL-UNNAMED']
+    }
 }
 
 processResources {
@@ -42,9 +53,6 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
-    systemProperty "spring.profiles.active", "test"
-    systemProperty "spring.config.location", "classpath:application-test.properties"
-    systemProperty "spring.config.name", "application-test"
 }
 
 dependencies {
@@ -52,29 +60,26 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.github.hazendaz.jsoup:jsoup:1.15.1'
-    testImplementation 'junit:junit:4.13.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.11.0'
-// https://mvnrepository.com/artifact/pl.pragmatists/JUnitParams
-    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-    testImplementation 'org.mockito:mockito-core:5.8.0'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers:4.0.5'
+    testImplementation 'org.testcontainers:mongodb:1.21.4'
+    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
+    testImplementation 'org.mockito:mockito-core:5.23.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
-    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.0'
     // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
     implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 
-    compileOnly 'org.projectlombok:lombok:1.18.30' // Use the latest version
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.projectlombok:lombok:1.18.44' // Use the latest version
+    annotationProcessor 'org.projectlombok:lombok:1.18.44'
 
 }
 
